[Hotfix] Creates apk

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,7 +9,7 @@
       <ion-card-header>
       </ion-card-header>
       <ion-card-content>
-        <form [formGroup]="signinForm" novalidate (ngSubmit)="onSignin(signinForm.controls)">
+        <form [formGroup]="signinForm" novalidate (ngSubmit)="onSignin()">
           <ion-list style="background-color: transparent;">
             <ion-item padding-bottom class="m-a">
               <ion-icon name="person" slot="start" color="primary"></ion-icon>
