--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -16,7 +16,7 @@
       <ion-card-header>
       </ion-card-header>
       <ion-card-content>
-        <form [formGroup]="onSignUpForm" novalidate (ngSubmit)="registro(onSignUpForm.controls)">
+        <form [formGroup]="onSignUpForm" novalidate (ngSubmit)="registro()">
           <ion-list style="background-color: transparent;">
             <ion-item padding-bottom class="m-a">
               <ion-icon name="person" slot="start" color="primary"></ion-icon>
